--- a/client/index.html
+++ b/client/index.html
@@ -34,10 +34,50 @@
         
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-3 visible-lg">
-                    <h4 class="aa-heading-info">My Tasks</h4>
+                <div class="col-md-1 visible-md visible-lg">
+                    <ul class="nav nav-dashboard-history pull-right">
+                        <li>
+                            <a href="#" class="active bg-primary">
+                                <span class="content-bottom">
+                                    <small>NS191W</small><br />
+                                    191
+                                </span>
+                            </a>
+                            <a href="#" class="bg-info">
+                                <span class="content-bottom">
+                                    <small>NS191W</small><br />
+                                    191
+                                </span>
+                            </a>
+                            <a href="#" class="bg-info">
+                                <span class="content-bottom">
+                                    <small>NS191W</small><br />
+                                    191
+                                </span>
+                            </a>
+                            <a href="#" class="bg-info">
+                                <span class="content-bottom">
+                                    <small>NS191W</small><br />
+                                    191
+                                </span>
+                            </a>
+                            <a href="#" class="bg-info">
+                                <span class="content-bottom">
+                                    <small>NS191W</small><br />
+                                    191
+                                </span>
+                            </a>
+                            <a href="#" class="bg-info">
+                                <span class="content-bottom">
+                                    <small>NS191W</small><br />
+                                    191
+                                </span>
+                            </a>
+                        </li>
+                    </ul>
                 </div>
-                <div class="col-xs-12 col-lg-6">
+                
+                <div class="col-xs-12 col-md-9 col-lg-8">
                     <div class="row aa-aircraft-info">
                         <div class="col-xs-4 col-sm-2">
                             <small class="text-muted">Aircraft</small>
@@ -145,7 +185,7 @@
                         <h4 class="aa-heading-info">MELs</h4>
                     </div>
                 </div>
-                <div class="col-lg-3 visible-lg">
+                <div class="col-md-2 col-lg-3 visible-md visible-lg">
                     <h4 class="aa-heading-info">Chat</h4>
                 </div>
             </div>
