--- a/client/index.html
+++ b/client/index.html
@@ -117,9 +117,9 @@
                             <div class="panel panel-default">
                                 <div class="aa-flight-box panel-body">
                                     <h1>
-                                        <small class="text-muted visible-xs">AA Flight 1234</small>
+                                        <small class="text-muted visible-xs">Flight 1234</small>
                                         <span>
-                                            <span>LAX</span> &rarr; <span>PHX</span>
+                                            <span class="text-muted hidden-xs">1234&nbsp;</span><span>LAX</span> &rarr; <span>PHX</span>
                                         </span>
                                         <small class="text-muted">Arrives PHX &mdash; Jan 01, 2000</small>
                                     </h1>
@@ -127,16 +127,14 @@
                                     <table class="table">
                                         <thead>
                                             <tr>
-                                                <th class="col-sm-2 text-muted hidden-xs">Flight</th>
                                                 <th class="col-sm-6 text-muted">Scheduled 00:00</th>
-                                                <th class="col-sm-2 text-muted">Status</th>
-                                                <th class="col-sm-2 text-muted">Gate</th>
+                                                <th class="col-sm-3 text-muted">Status</th>
+                                                <th class="col-sm-3 text-muted">Gate</th>
                                             </tr>
                                         </thead>
                                         <tbody>
                                             <tr>
-                                                <td class="text-muted hidden-xs">1234</td>
-                                                <td>00:00</td>
+                                                <td class="text-success">00:00</td>
                                                 <td class="text-muted">-</td>
                                                 <td class="text-muted">A2</td>
                                             </tr>
@@ -150,9 +148,9 @@
                             <div class="panel panel-default">
                                 <div class="aa-flight-box panel-body">
                                     <h1>
-                                        <small class="text-muted visible-xs">AA Flight 1234</small>
+                                        <small class="text-muted visible-xs">Flight 1234</small>
                                         <span>
-                                            <span>PHX</span> &rarr; <span>DFW</span>
+                                            <span class="text-muted hidden-xs">1234&nbsp;</span><span>PHX</span> &rarr; <span>DFW</span>
                                         </span>
                                         <small class="text-muted">Departs PHX &mdash; Jan 01, 2000</small>
                                     </h1>
@@ -160,16 +158,14 @@
                                     <table class="table">
                                         <thead>
                                             <tr>
-                                                <th class="col-sm-2 text-muted hidden-xs">Flight</th>
                                                 <th class="col-sm-6 text-muted">Scheduled 00:00</th>
-                                                <th class="col-sm-2 text-muted">Status</th>
-                                                <th class="col-sm-2 text-muted">Gate</th>
+                                                <th class="col-sm-3 text-muted">Status</th>
+                                                <th class="col-sm-3 text-muted">Gate</th>
                                             </tr>
                                         </thead>
                                         <tbody>
                                             <tr>
-                                                <td class="text-muted hidden-xs">1234</td>
-                                                <td>00:00</td>
+                                                <td class="text-success">00:00</td>
                                                 <td class="text-muted">-</td>
                                                 <td class="text-muted">A2</td>
                                             </tr>
@@ -186,7 +182,17 @@
                     </div>
                 </div>
                 <div class="col-md-2 col-lg-3 visible-md visible-lg">
-                    <h4 class="aa-heading-info">Chat</h4>
+                    <div class="panel panel-default">
+                        <div class="panel-body">
+                            <div class="aa-aircraft-info">
+                                <small class="text-muted">LCC\Username</small>
+                                <h4>User Name</h4>
+                            </div>
+
+                            <h4 class="aa-heading-info">My Tasks</h4>
+                            <h4 class="aa-heading-info">Chat</h4>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
