Changes to the Discrepancies summary navigation

--- a/client/index.html
+++ b/client/index.html
@@ -179,7 +179,7 @@
                             </h4>
                             
                             <ul class="nav nav-pills nav-justified block">
-                                <li>
+                                <li class="active">
                                     <a href="#">
                                         <h1 class="text-right text-info">
                                             10
