--- a/client/index.html
+++ b/client/index.html
@@ -307,5 +307,7 @@
                 </div>
             </div>
         </div>
+        
+        <script data-main="./src/config.js" src="./src/vendor/requirejs/require.js"></script>
     </body>
 </html>
