better solution to affix problem

--- a/client/index.html
+++ b/client/index.html
@@ -58,7 +58,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-md-2 navbar-fixed-top-offset">
-                    <div class="aircraftinfo" data-offset-top="-65" data-bs-affix="">
+                    <div data-offset-top="-65" data-bs-affix="">
                         <form class="form-inline block" role="form" data-ng-submit="findAircraft()" data-ng-controller="AircraftSearchController">
                             <span class="input-group">
                                 <input type="text" class="form-control" placeholder="Nose #" data-ng-model="noseNumber">
